<resources>
    <string name="app_name">Online Work</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_message">Welcome to %1$s!</string>
    <string name="continue_string">Continue</string>
    <string name="next">Next</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="overview">Overview</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="rate_app">Rate This App</string>
    <string name="share_app">Share the App</string>
    <string name="application">Application</string>
    <string name="fragment_home">HOME</string>
    <string name="fragment_categories">CATEGORIES</string>
    <string name="fragment_favorites">FAVORITES</string>
    <string name="slogan">Empowering You to Get Hired.</string>
    <string name="no_jobs_found">No jobs found</string>
    <string name="error_loading_jobs">Error loading jobs. Please try again.</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="TOPON_APP_ID">h68249ea706887</string>
    <string name="TOPON_APP_KEY">a186f91c734e4318e1ccd3423f7ca138f</string>
    <string name="INTERSTITIAL_PLACEMENT_ID">n68249f0d4ac44</string>
    <string name="BANNER_PLACEMENT_ID">n68249f0e2d6ad</string>
    <string name="NATIVE_PLACEMENT_ID">"n68249f0dcb7d6"</string>
    <string name="FACEBOOK_APP_ID">1397785331270145</string>//647641511046117//24154925827448323
    <string name="FACEBOOK_TOKEN">3bb8c849ca524db59fc1a0e459e1403e</string>
    //794eb1d547ee1a7d5b691f092dc23b08


    <string name="sponsored_content">Sponsored</string>
    <string name="ad_choices">Ad choices</string>
    <string name="close_ad">Close ad</string>
</resources>